# dotfiles

./: .gitignore  .gitmodules  LICENSE  Preferences.sublime-settings  README.md  Xresources  _install-cargo-bins.sh  alacritty.yml  cmdline.md  compile_nvim.sh  download-wallpaper.sh  install.conf.yaml  install.lock.json  install.py  install.sh  konsole-colors-to-alacritty.py  make-symlinks.sh  nvim-terminal-edit.py  pyproject.toml  t570.md  tmux.conf  video-edit.md  vim.md  vimrc  xprofile  zprofile  zshrc
QtCreator/: README.md  onedark_tk.xml
applications/: dictation-indicator.desktop
bottom/: bottom.toml
claude/: settings.json  statusline.py
codex/: config.toml
direnv/: direnv.toml
doc/: TODO.md  ghostty.md  nerd-dictation.md  screenshare.md  whisper.md
ghostty/: config
howto/arduino/: README.md  arduino.ino  build-and-flash.sh  setup-arduino-cli.sh
i3/: config  i3status-rs.toml  picom.conf
nvim/: README.md  init.lua  lazy-lock.json  lazyvim.json
nvim.bak/: README.md  init.lua  lazy-lock.json
nvim.bak/after/compiler/: python.vim
nvim.bak/after/ftplugin/: python.lua
nvim.bak/lua/plugins/: gitsigns.lua  illuminate.lua  init.lua  mini_comment.lua  mini_surround.lua  neo-tree.lua  null_ls.lua  overseer.lua  statuscol.lua  telescope.lua  todo-comments.lua
ref/: .gitignore  shortcuts.tex
scripts/: 24-bit-color.sh  install-neovim-rpi.sh
services/ydotool/: ydotoold.service
vscode/: settings.json
xdg/: user-dirs.dirs
zed/: README.md  clean-settings.py  debug.json  keymap.json  settings.json  tasks.json  zed-oom-protect
(+46 files in other folders)
