[project]
name = "dotfiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["colorama>=0.4.6"]

[dependency-groups]
dev = ["types-colorama>=0.4.15.20240311"]

[tool.ruff]
exclude = [
  "oh-my-zsh",
  "tmux/plugns/tmux-thumb",
  "tmux/plu,ins/tpm",
  "zsh/plugins/zsh-autosuggestions",
  "zsh/plugins/zsh-bat",
  "zsh/plugins/zsh-syntax-highlighting",
  "zsh/plugins/zsh-you-should-use",
]
